--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berry Game</title>
 
-    <script src="./src/lib/matter.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/matter-js@0.18.0/build/matter.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script>
     
     <link rel="stylesheet" href="./src/css/style.css" />
 </head>
@@ -13,6 +14,6 @@
     <main>
         <div id="matter"></div>
     </main>
-    <script src="./src/js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
