--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Berry Game</title>
 
-    <script src="//cdn.jsdelivr.net/npm/matter-js@0.18.0/build/matter.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script>
+    <script src="./src/lib/matter.min.js"></script>
     
     <link rel="stylesheet" href="./src/css/style.css" />
 </head>
