--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <body>
     <main>
         <div id="matter"></div>
+        <div id="score"></div>
+
+        <div id="title-screen">
+            <h1 id="title">ベリーゲーム</h1>
+
+            <p>⇑ライフ</p>
+            <buttton id="start"></buttton>
+        </div>
+
     </main>
     <script src="./script.js"></script>
 </body>
