--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <div id="score"></div>
 
         <div id="title-screen">
-            <h1 id="title">ベリーゲーム</h1>
+            <h1 id="title"><img id="logo" src="./src/img/logo_256.png" alt="Berry Game"></h1>
 
-            <p>⇑ライフ</p>
-            <buttton id="start"></buttton>
+            <button id="start">スタート</button>
         </div>
 
     </main>
