--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h1 id="title"><img id="logo" src="./src/img/logo_256.png" alt="Berry Game"></h1>
 
             <button id="start">スタート</button>
+            <p>スマホを左右に傾けてプレイ!!!</p>
         </div>
 
     </main>
