--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <div id="title-screen">
             <h1 id="title"><img id="logo" src="./src/img/logo_256.png" alt="Berry Game"></h1>
 
-            <button id="start">スタート</button>
-            <p>スマホを左右に傾けてプレイ!!!</p>
+            <div id="menu">
+                <button id="start">スタート</button>
+                <p>スマホを左右に傾けてプレイ!!!</p>
+            </div>
         </div>
 
     </main>
