--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         <div id="title-screen">
             <h1 id="title"><img id="logo" src="./src/img/logo_256.png" alt="Berry Game"></h1>
 
-            <div id="menu">
+            <div id="phone">
                 <button id="start">スタート</button>
-                <p>スマホを左右に傾けてプレイ!!!</p>
+                <p id="info-msg">スマホを左右に傾けてプレイ!!!</p>
+            </div>
+            <div id="pc">
+                <img id="qr" src="./src/img/berry-game-cf.png" alt="QR Code">
+                <p id="info-msg">スマホを左右に傾けてプレイ!!!</p>
             </div>
         </div>
 
